@@ -1,1 +1,7 @@
 # WebBrowser
+
+For Java 8+ add this VM path: 
+--module-path
+"C:\javafx-sdk-11.0.2\lib"
+--add-modules
+javafx.web,javafx.controls,javafx.fxml
